bug#4997 - --log-error sometimes generates incorrect default name. Now replacing domain name by 'err'. If host name doesn't have a domain name, '.err' is appended as before.